[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "stlmc"
version = "1.0.0.dev2"
description = "An SMT-based bounded model checker for signal temporal logic"
readme = "README.md"
license.text = "GPLv3"
keywords = ["stlmc", "model checker", "STL", "signal temporal logic", "bounded model checker"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
	  "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
  "termcolor",
  "yices",
  "z3-solver",
  "antlr4-python3-runtime==4.13.2",
  "sympy",
  "numpy",
  "bokeh==3.1.1",
  "scipy"
]

[[project.authors]]
name  = "Geunyeol Yu"
email = "rgyen@postech.ac.kr"

[project.scripts]
stlmc = "stlmc.cli.mc:main"
stlmc-vis = "stlmc.cli.visualize:main"

[project.urls]
"Homepage"      = "https://stlmc.github.io/"
"Bug Tracker"   = "https://github.com/stlmc/stlmc/issues"
"Documentation" = "https://stlmc.github.io/assets/files/stlmc-manual.pdf"
"Source Code"   = "https://github.com/stlmc/stlmc/"

[tool.scikit-build]
sdist.include = ["src/", "3rd_party/", "tests/"]